--- a/frontend/index.html
+++ b/frontend/index.html
@@ -165,7 +165,7 @@
                <div class="twelve columns">
 
                   <h3>Scripting And Automation</h3>
-                  <p class="info">Bash Scripting, Jenkins, Gitlab CI, GitHub Actions</p>
+                  <p class="info">Bash Scripting, Python, Jenkins, Gitlab CI, GitHub Actions</p>
 
                </div>
 
@@ -187,7 +187,7 @@
                <div class="twelve columns">
 
                   <h3>Databases</h3>
-                  <p class="info">Oracle, MySQL</p>
+                  <p class="info">Oracle, MySQL, Cosmos DB</p>
 
                </div>
 
